# rules_k8s

./: BUILD.bazel  MODULE.bazel  README.md  image-export.sh  minikube-runner.sh  minikube.sh  oras-push.sh  private.bzl  registry.bzl  resource.bzl  sha256-substitute.sh  test-runner.sh  test.bzl  tls-generate.sh  vimana-push.sh
.github/workflows/: auto-registry.yaml  tests.yaml
dev/: checksums-update.sh  dependencies-upgrade.sh  update-checksums.sh
test/: BUILD.bazel  image-export-test.sh
tests/: BUILD.bazel
