load("@bazel_skylib//lib:selects.bzl", "selects")
load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load(":private.bzl", "execution_platforms", "format_platform")

exports_files(["test-runner.sh"])

# Execution-platform-specific aliases for pre-built binaries:
# Some custom rules need Bash, so Windows is out for now.
# Pre-built binaries might be available for other CPU's.

[selects.config_setting_group(
    name = "exe-" + platform,
    match_all = [
        "@platforms//cpu:" + platform.split("-")[0],
        "@platforms//os:" + platform.split("-")[1],
    ],
) for platform in execution_platforms]

native_binary(
    name = "kubectl",
    src = format_platform("@kubectl-{}//file"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "kube-apiserver",
    src = format_platform("@kube-apiserver-{}//file"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "etcd",
    src = format_platform("@etcd-{}//:etcd"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "etcdctl",
    src = format_platform("@etcd-{}//:etcdctl"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "etcdutl",
    src = format_platform("@etcd-{}//:etcdutl"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "helm",
    src = format_platform("@helm-{}//:helm"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "kustomize",
    src = format_platform("@kustomize-{}//:kustomize"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "crictl",
    src = format_platform("@crictl-{}//:crictl"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "kops",
    src = format_platform("@kops-{}//file"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "operator-sdk",
    src = format_platform("@operator-sdk-{}//file"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "controller-gen",
    src = format_platform("@controller-gen-{}//file"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "crane",
    src = format_platform("@crane-{}//:crane"),
    visibility = ["//visibility:public"],
)

# The native minikube binary has to be wrapped in a script (see below).
native_binary(
    name = "minikube-bin",
    src = format_platform("@minikube-{}//:minikube"),
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "minikube",
    srcs = ["minikube-runner.sh"],
    args = [
        "$(location :minikube-bin)",
        "$(location :kubectl)",
    ],
    data = [
        ":kubectl",
        ":minikube-bin",
    ],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "tls-generate",
    srcs = ["tls-generate.sh"],
    visibility = ["//visibility:public"],
)

# These binaries are expected to end up in Docker containers,
# so you probably need the x86-64 / Linux version no matter what the execution platform is:

native_binary(
    name = "crictl-x86_64-linux",
    src = "@crictl-x86_64-linux//:crictl",
    visibility = ["//visibility:public"],
)

native_binary(
    name = "host-local-x86_64-linux",
    src = "@cni-plugins-x86_64-linux//:host-local",
    visibility = ["//visibility:public"],
)

alias(
    name = "gateway-api",
    actual = "@gateway-api//file",
    visibility = ["//visibility:public"],
)
