load("@bazel_skylib//lib:selects.bzl", "selects")
load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@rules_oci//oci:defs.bzl", "oci_load")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load(":private.bzl", "execution_platforms", "format_platform", "image_export")

exports_files([
    "oras-push.sh",
    "test-runner.sh",
])

# Execution-platform-specific aliases for pre-built binaries:
# Some custom rules need Bash, so Windows is out for now.
# Pre-built binaries might be available for other CPU's.

[selects.config_setting_group(
    name = "exe-" + platform,
    match_all = [
        "@platforms//cpu:" + platform.split("-")[0],
        "@platforms//os:" + platform.split("-")[1],
    ],
) for platform in execution_platforms]

native_binary(
    name = "kubectl",
    src = format_platform("@kubectl.{}//file"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "kube-apiserver",
    src = format_platform("@kube-apiserver.{}//file"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "etcd",
    src = format_platform("@etcd.{}//:etcd"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "etcdctl",
    src = format_platform("@etcd.{}//:etcdctl"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "etcdutl",
    src = format_platform("@etcd.{}//:etcdutl"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "helm",
    src = format_platform("@helm.{}//:helm"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "kustomize",
    src = format_platform("@kustomize.{}//:kustomize"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "crictl",
    src = format_platform("@crictl.{}//:crictl"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "kops",
    src = format_platform("@kops.{}//file"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "operator-sdk",
    src = format_platform("@operator-sdk.{}//file"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "controller-gen",
    src = format_platform("@controller-gen.{}//file"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "oras",
    src = format_platform("@oras.{}//:oras"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "crane",
    src = format_platform("@crane.{}//:crane"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "kind",
    src = format_platform("@kind.{}//file"),
    visibility = ["//visibility:public"],
)

alias(
    name = "cloud-provider-kind",
    actual = format_platform("@cloud-provider-kind.{}//:cloud-provider-kind"),
    visibility = ["//visibility:public"],
)

native_binary(
    name = "grpcurl",
    src = format_platform("@grpcurl.{}//:grpcurl"),
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "tls-generate",
    srcs = ["tls-generate.sh"],
    visibility = ["//visibility:public"],
)

alias(
    name = "gateway-api-crds",
    actual = "@gateway-api-crds//file",
    visibility = ["//visibility:public"],
)

alias(
    name = "envoy-gateway-crds",
    actual = "@envoy-gateway-crds//file",
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "image-export",
    srcs = ["image-export.sh"],
)

image_export(
    name = "envoy-gateway-helm-export",
    ocitar = ":envoy-gateway-helm.oci.tar",
    visibility = ["//visibility:public"],
)

oci_load(
    name = "envoy-gateway-helm",
    image = "@envoy-gateway-helm",
    repo_tags = ["docker.io/envoyproxy/gateway-helm:latest"],
)

# https://github.com/bazel-contrib/rules_oci/blob/v2.2.6/docs/load.md#build-outputs
filegroup(
    name = "envoy-gateway-helm.oci.tar",
    srcs = [":envoy-gateway-helm"],
    output_group = "tarball",
)
