module(
    name = "rules_k8s",
    version = "0.0.1",
)

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True, repo_name = "buildtools")

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_shell", version = "0.6.1")

# Supported execution platforms for pre-built binaries.
# TODO: Figure out how to dedupe these lists with `private.bzl`.
execution_platforms = [
    "aarch64-linux",
    "aarch64-macos",
    "x86_64-linux",
    "x86_64-macos",
]

# https://github.com/kubernetes/kubernetes/releases
kubernetes_version = "1.35.0"

# To find the best-tested version of etcd for a given version of K8s,
# check the changelog, e.g.
# https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.35.md
etcd_version = "3.6.7"

# https://github.com/helm/helm/releases
helm_version = "4.1.0"

# https://github.com/kubernetes-sigs/gateway-api/releases
# Must be compatible with `envoy_gateway_version`: https://gateway.envoyproxy.io/news/releases/matrix/
gateway_api_version = "1.4.0"

# https://github.com/envoyproxy/gateway/releases
# Must be compatible with `gateway_api_version`: https://gateway.envoyproxy.io/news/releases/matrix/
# Must match `envoy_gateway_helm_digest`.
envoy_gateway_version = "1.6.3"

# https://hub.docker.com/r/envoyproxy/gateway-helm/tags
# Must match `envoy_gateway_version`.
envoy_gateway_helm_digest = "sha256:ec0acd1bdb7ff253e69eaef6a39c56fc43f6a32b475a3bb2184f0ed31f178761"

# https://quay.io/repository/jetstack/charts/cert-manager?tab=tags
cert_manager_helm_digest = "sha256:ffd45ca4c55eb33094d55d555283a7742024cf9054b8d065ae2ea493fb6cc489"

# https://github.com/kubernetes-sigs/external-dns/releases
# Use the Helm chart version (not the release version).
external_dns_helm_version = "1.20.0"

# https://github.com/kubernetes-sigs/kustomize/releases
kustomize_version = "5.8.0"

# https://github.com/kubernetes-sigs/cri-tools/releases
cri_tools_version = "1.35.0"

# https://github.com/kubernetes/kops/releases
kops_version = "1.34.1"

# https://github.com/operator-framework/operator-sdk/releases
operator_sdk_version = "1.42.0"

# https://github.com/kubernetes-sigs/controller-tools/releases
controller_tools_version = "0.20.0"

# https://github.com/kubernetes-sigs/kind/releases
kind_version = "0.31.0"

# https://github.com/kubernetes-sigs/cloud-provider-kind/releases
cloud_provider_kind_version = "0.10.0"

# https://github.com/oras-project/oras/releases
oras_version = "1.3.0"

# https://github.com/google/go-containerregistry/releases
crane_version = "0.20.7"

# https://github.com/fullstorydev/grpcurl/releases
grpcurl_version = "1.9.3"

# https://github.com/vimana-cloud/grpc/releases
grpc_plugins_version = "1.76.0"

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

k8s_platforms = {
    "aarch64-linux": "linux/arm64",
    "aarch64-macos": "darwin/arm64",
    "x86_64-linux": "linux/amd64",
    "x86_64-macos": "darwin/amd64",
}

[http_file(
    name = "kubectl.{}".format(exe_platform),
    executable = True,
    integrity = {
        "aarch64-linux": "sha384-BlIrC/4WcsKngCvekCcHjsEFOxREUVQXZ8DASbLINWUC5FNApiEr4X8JXmKr0+7z",
        "aarch64-macos": "sha384-ZC04rME2o7TjVxB7GE7o+fTqWAKumy/u0tE1CQKZW/X3GVGgYsSfccTyKWuZqU/l",
        "x86_64-linux": "sha384-qCCI+esr2SLh6GKh2I33oTnABYZeydYCD9cXzFUkKCIflP7RaqXfYiNEb1u/DuIC",
        "x86_64-macos": "sha384-YG7/dYrPDuM/Df1IjdGLJyd9wPO8e/kr8U8UUTCptjCbOnky20PcoiPkFvl1HM6O",
    }[exe_platform],
    url = "https://dl.k8s.io/v{version}/bin/{platform}/kubectl".format(
        platform = k8s_platforms[exe_platform],
        version = kubernetes_version,
    ),
) for exe_platform in execution_platforms]

[http_file(
    name = "kube-apiserver.{}".format(exe_platform),
    executable = True,
    integrity = {
        "aarch64-linux": "sha384-iNQ8mTEK3gRwdWXhBfxcffhVJrYHufXqtRPTT1XZ+/3NChZtDNeOPXqPiZX4KxDY",
        "aarch64-macos": None,
        "x86_64-linux": "sha384-ngqrkiojRGj5CCB9IOQwMbnmAkyceLXXGVahTccOwyyFCTLhQ8RRAf+IajHV1iCp",
        "x86_64-macos": None,
    }[exe_platform],
    url = "https://dl.k8s.io/v{version}/bin/{platform}/kube-apiserver".format(
        platform = k8s_platforms[exe_platform],
        version = kubernetes_version,
    ),
) for exe_platform in execution_platforms]

[http_archive(
    name = "etcd.{}".format(exe_platform),
    build_file_content = """
package(
    default_visibility = ["//visibility:public"],
)
alias(
    name = "etcd",
    actual = "etcd-v{version}-{platform}/etcd",
)
alias(
    name = "etcdctl",
    actual = "etcd-v{version}-{platform}/etcdctl",
)
alias(
    name = "etcdutl",
    actual = "etcd-v{version}-{platform}/etcdutl",
)
""".format(
        platform = {
            "aarch64-linux": "linux-arm64",
            "aarch64-macos": "darwin-arm64",
            "x86_64-linux": "linux-amd64",
            "x86_64-macos": "darwin-amd64",
        }[exe_platform],
        version = etcd_version,
    ),
    integrity = {
        "aarch64-linux": "sha384-lGsmjy3avzONyywilQr5ApcFxtEFM2tJtqcDhoXURILuskq49CEZb4qw3uxIVDEj",
        "aarch64-macos": "sha384-waf9R+Sct8xasaRVui9RmmRJSTyhjcw+ovK1mxV3n17NiE1TOt+5Yi0QnI0zj8in",
        "x86_64-linux": "sha384-pNCNu33aEUqjR9ecRNWQetTkFYlbIl/gDi/NZYYWuRApYrBzb2EMbNBsMcJtrDxz",
        "x86_64-macos": "sha384-rTb6Uyx8vTiJgDxndA6MOltIZSAkgyOtndQsvROve9Bh21ifgWq64BsabLTNU9K1",
    }[exe_platform],
    url = "https://github.com/etcd-io/etcd/releases/download/v{version}/etcd-v{version}-{platform}".format(
        platform = {
            "aarch64-linux": "linux-arm64.tar.gz",
            "aarch64-macos": "darwin-arm64.zip",
            "x86_64-linux": "linux-amd64.tar.gz",
            "x86_64-macos": "darwin-amd64.zip",
        }[exe_platform],
        version = etcd_version,
    ),
) for exe_platform in execution_platforms]

helm_platforms = {
    "aarch64-linux": "linux-arm64",
    "aarch64-macos": "darwin-arm64",
    "x86_64-linux": "linux-amd64",
    "x86_64-macos": "darwin-amd64",
}

[http_archive(
    name = "helm.{}".format(exe_platform),
    build_file_content = """
alias(
    name = "helm",
    actual = "{platform}/helm",
    visibility = ["//visibility:public"],
)
""".format(platform = helm_platforms[exe_platform]),
    integrity = {
        "aarch64-linux": "sha384-6Jox7FAjGchOv1FNUMVEiPUP8+CfDwC4RMJCsPYsiHtuQpWB7t5KcvVgd/KDOAZ7",
        "aarch64-macos": "sha384-J2ZN/vYf77ZSlwQesWpjWGaI4XoeXXO18NBw+y1s071ba4JGvqyAQ7Adj79XKoIL",
        "x86_64-linux": "sha384-qTfZC1Snbxdu+jDai7A1LvUivDPc8dxWjJn6z+VEoR9DYkoM4TAOne8+SFEcvdqD",
        "x86_64-macos": "sha384-WAAihyxP05BfzjY8BCFShe+HYUmFkmkJuzPNP1PxYcbxTIyzzGwWlK27XNTuKAip",
    }[exe_platform],
    url = "https://get.helm.sh/helm-v{version}-{platform}.tar.gz".format(
        platform = helm_platforms[exe_platform],
        version = helm_version,
    ),
) for exe_platform in execution_platforms]

http_file(
    name = "gateway-api-crds",
    integrity = "sha384-qFJe9RR6XBEZM7cGg2JoqhJWq8U0/uqfSLiWbazmec/+p6G9w9Uu/zW8BLQdIwXH",
    url = "https://github.com/kubernetes-sigs/gateway-api/releases/download/v{version}/standard-install.yaml".format(
        version = gateway_api_version,
    ),
)

http_file(
    name = "envoy-gateway-crds",
    integrity = "sha384-BHum6UiJNW7hQ4V9wcscH9M+A3D9QhO9nwzSPSVDh3hq5hAJbiqt6qwRxjhssJYs",
    url = "https://github.com/envoyproxy/gateway/releases/download/v{version}/envoy-gateway-crds.yaml".format(
        version = envoy_gateway_version,
    ),
)

[http_archive(
    name = "kustomize.{}".format(exe_platform),
    build_file_content = """
exports_files(
    ["kustomize"],
    visibility = ["//visibility:public"],
)
""",
    integrity = {
        "aarch64-linux": "sha384-HT6hk+i2vLQrinVboYeZ4cPMNwz4kwnFzI/+jWy4Ul/+LXaJ5I5CaLWB+A13ze4I",
        "aarch64-macos": "sha384-xJqaTV1cSo8d6RhIhMhGHMXFaeL1SGuMPU34+rckfY/BeLI63Tb3UBhbw/YNXFzZ",
        "x86_64-linux": "sha384-jAUP7VV5xC6oa0Z5LESS1zZNQ057hsRz2+BaWZN6iAx12El+sqnbj8jfZ+wrkobU",
        "x86_64-macos": "sha384-8+pc6GTy0KulYYzFAACRSTTlCoMS0s6o7qESqDN8IpoE8QbfmdM/rtVpbvGhjSMk",
    }[exe_platform],
    url = "https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv{version}/kustomize_v{version}_{platform}.tar.gz".format(
        platform = {
            "aarch64-linux": "linux_arm64",
            "aarch64-macos": "darwin_arm64",
            "x86_64-linux": "linux_amd64",
            "x86_64-macos": "darwin_amd64",
        }[exe_platform],
        version = kustomize_version,
    ),
) for exe_platform in execution_platforms]

[http_archive(
    name = "crictl.{}".format(exe_platform),
    build_file_content = """
exports_files(
    ["crictl"],
    visibility = ["//visibility:public"],
)
""",
    integrity = {
        "aarch64-linux": "sha384-Nw/fUxiveYixbhGLGSsp6veAZ3qKsUVZw2njqNx10oMFYcrfE0sVydzLIeu8Fne+",
        "aarch64-macos": "sha384-SjyWVK8HndaT+Qv9G+ryketaK4iSu3mu6y0j7gYHbOcTOVqIfjUZK7RPUWz7I7Ta",
        "x86_64-linux": "sha384-aQiATTGT+2eFK0TR3Fj2HwyhxwQoWazlmSb0214AiVqVjdrSY0ASUD62F/1zQxRI",
        "x86_64-macos": "sha384-EUw0MRY5x5FGtzpXm7WFiKhs0Vw1z0N9dfqko/dFD7G1XBpfaUCGjxundNF02CgI",
    }[exe_platform],
    url = "https://github.com/kubernetes-sigs/cri-tools/releases/download/v{version}/crictl-v{version}-{platform}.tar.gz".format(
        platform = {
            "aarch64-linux": "linux-arm64",
            "aarch64-macos": "darwin-arm64",
            "x86_64-linux": "linux-amd64",
            "x86_64-macos": "darwin-amd64",
        }[exe_platform],
        version = cri_tools_version,
    ),
) for exe_platform in execution_platforms]

[http_file(
    name = "kops.{}".format(exe_platform),
    executable = True,
    integrity = {
        "aarch64-linux": "sha384-66f3DTHDxoriTbJUXeYkEJf1x0MbuIZpVCY21SFaRWoVektfxSlMTxfOmhkDMJAQ",
        "aarch64-macos": "sha384-VqVMCIgK+NldAH0l2ldHKaOvxSewjxvWuSU7bV2W+1XV0OgBKtRd5HhVTZHzERTL",
        "x86_64-linux": "sha384-VOvBxxH5Yp8sqMM2jcKlvbqwbJfHU1sskhvDMkkf9HrHscQvVD6ptpFNgTo9e126",
        "x86_64-macos": "sha384-C/AKz31bEjjvsx4s6gkjq85Lob4ymEwWtcIsuUadJGND+3ZujC/tRezLmMPZKYck",
    }[exe_platform],
    url = "https://github.com/kubernetes/kops/releases/download/v{version}/kops-{platform}".format(
        platform = {
            "aarch64-linux": "linux-arm64",
            "aarch64-macos": "darwin-arm64",
            "x86_64-linux": "linux-amd64",
            "x86_64-macos": "darwin-amd64",
        }[exe_platform],
        version = kops_version,
    ),
) for exe_platform in execution_platforms]

[http_file(
    name = "operator-sdk.{}".format(exe_platform),
    executable = True,
    integrity = {
        "aarch64-linux": "sha384-ZYjrE8CBkoIcN+iTOpP6J51I1RcG5fQ6kkz9T+dJ5rnirSH+1WN0j46JOCRdJv4/",
        "aarch64-macos": "sha384-WfX4NeZiSkpP0UhOTsmsCl7uqovpt/YHxkCoNWpe0nUjwtzW+qS4sTXdvSa8dvDv",
        "x86_64-linux": "sha384-RnuObky1U2KAjMBpLZfD2nniqkUmCwKkzX2IRsytDz5mqrGFM17EAnMhWhgzRBrw",
        "x86_64-macos": "sha384-C/DEReaA/sN8iWuGmxohmYA0s/ty7wG87w+WteaXpJd4RG9AEshfr8kgRu4NQBvq",
    }[exe_platform],
    url = "https://github.com/operator-framework/operator-sdk/releases/download/v{version}/operator-sdk_{platform}".format(
        platform = {
            "aarch64-linux": "linux_arm64",
            "aarch64-macos": "darwin_arm64",
            "x86_64-linux": "linux_amd64",
            "x86_64-macos": "darwin_amd64",
        }[exe_platform],
        version = operator_sdk_version,
    ),
) for exe_platform in execution_platforms]

[http_file(
    name = "controller-gen.{}".format(exe_platform),
    executable = True,
    integrity = {
        "aarch64-linux": "sha384-zQmuQ4CvbfU4oWAanhtbZ0uqs/5Az0EBMyuVwChCjAyhqJ6RxMvvzKk4aBFCuCZA",
        "aarch64-macos": "sha384-GCgErBqDkQ8pF/UKnZR9L2P2ZeSEwIx4PiwAd4ZHasMkGAnvQfWAJuZtSXMWQvBR",
        "x86_64-linux": "sha384-qrRBvv/fhcrGbDN6uPBozdhJ/V7KvlseJzRkAnfGMnOI7iywRhtxVZIymz7bucIL",
        "x86_64-macos": "sha384-9/yeZSggLpKECGCfMfHsD38Yfu36py0sl/UOLePZHOqJDVkz80oNUP+r9cbiDf6N",
    }[exe_platform],
    url = "https://github.com/kubernetes-sigs/controller-tools/releases/download/v{version}/controller-gen-{platform}".format(
        platform = {
            "aarch64-linux": "linux-arm64",
            "aarch64-macos": "darwin-arm64",
            "x86_64-linux": "linux-amd64",
            "x86_64-macos": "darwin-amd64",
        }[exe_platform],
        version = controller_tools_version,
    ),
) for exe_platform in execution_platforms]

[http_file(
    name = "kind.{}".format(exe_platform),
    executable = True,
    integrity = {
        "aarch64-linux": "sha384-5ZjjxFWIMT7E0J7HDIAakWrrczl/PgcPDP0ccPFspU7MCOesLXkamjzIDUmYd+Jt",
        "aarch64-macos": "sha384-bZtxNcJsg+oE4AwGRpykc/oBOgx31Uvxhk8mQAUHBO1XHtrxfHBOATix3NGoHXla",
        "x86_64-linux": "sha384-AqMpe+mfZH3hwU5OUStu+xIhPCf10KDVrQyDp7c4t3JUDAODg6HE8n21tH0r2AgM",
        "x86_64-macos": "sha384-sW63+D5t7ylcBTV0F4Al9aglUhsPQW0B4kvNuhXBG/hzUbrseHxId4MYTI+fl44b",
    }[exe_platform],
    url = "https://github.com/kubernetes-sigs/kind/releases/download/v{version}/kind-{platform}".format(
        platform = {
            "aarch64-linux": "linux-arm64",
            "aarch64-macos": "darwin-arm64",
            "x86_64-linux": "linux-amd64",
            "x86_64-macos": "darwin-amd64",
        }[exe_platform],
        version = kind_version,
    ),
) for exe_platform in execution_platforms]

[http_archive(
    name = "cloud-provider-kind.{}".format(exe_platform),
    build_file_content = """
exports_files(
    ["cloud-provider-kind"],
    visibility = ["//visibility:public"],
)
""",
    integrity = {
        "aarch64-linux": "sha384-bLF7ALJWe/96PbVaGv5AtCXfUwDlzarUQLi5PBPaGKwuE/hcUbUEiAeGxycLvPFF",
        "aarch64-macos": "sha384-qw7mCl88ts5ejFOM48Lul6r+xVEqprHNJVue0xnLI0W28U/pEXXfdg+rPT91/b8s",
        "x86_64-linux": "sha384-MraztFcfS2qKTbx+WkzcoW9yQAFlGcqiPRBHBm13IJ7Mu7mi6iPrtn+gppQTIB5b",
        "x86_64-macos": "sha384-QMesjiUobPscScDKij7rg5CUgSvPkVF1gbILeJBoOHAzG+hB9oz+x3E3thn27TVe",
    }[exe_platform],
    url = "https://github.com/kubernetes-sigs/cloud-provider-kind/releases/download/v{version}/cloud-provider-kind_{version}_{platform}.tar.gz".format(
        platform = {
            "aarch64-linux": "linux_arm64",
            "aarch64-macos": "darwin_arm64",
            "x86_64-linux": "linux_amd64",
            "x86_64-macos": "darwin_amd64",
        }[exe_platform],
        version = cloud_provider_kind_version,
    ),
) for exe_platform in execution_platforms]

[http_archive(
    name = "oras.{}".format(exe_platform),
    build_file_content = """
exports_files(
    ["oras"],
    visibility = ["//visibility:public"],
)
""",
    integrity = {
        "aarch64-linux": "sha384-x9cHDfoZLCl8kcGQnpaPCzUn0CyDqe6aExUvn664kPRDv6sB+FJIKwwEJbPpwdlf",
        "aarch64-macos": "sha384-0F+mVGePKbDWlvSynzdzzqW573cG9yDbgVCTT7KDSM7VPlhp4sKJnsnw3OanvXjZ",
        "x86_64-linux": "sha384-n5fD68ERra5psN60+aAKv6tj/1cozDF84TmlaEPK4OFcbn+/AwqbWBO86cStznBi",
        "x86_64-macos": "sha384-7roVFvwUKz8zgPX9OAvy3tmzFqnca9VrhwoD1K7Q8pjf7hS8GsAJATKmWctVFwPI",
    }[exe_platform],
    url = "https://github.com/oras-project/oras/releases/download/v{version}/oras_{version}_{platform}.tar.gz".format(
        platform = {
            "aarch64-linux": "linux_arm64",
            "aarch64-macos": "darwin_arm64",
            "x86_64-linux": "linux_amd64",
            "x86_64-macos": "darwin_amd64",
        }[exe_platform],
        version = oras_version,
    ),
) for exe_platform in execution_platforms]

[http_archive(
    name = "crane.{}".format(exe_platform),
    build_file_content = """
exports_files(
    ["crane"],
    visibility = ["//visibility:public"],
)
""",
    integrity = {
        "aarch64-linux": "sha384-KVuVHnH5XxTv4LlCADB+pHnLmoRw7Rhz/gfSVLQguWXsh2hM24/ELbzsBzhegvTu",
        "aarch64-macos": "sha384-EMXlKoGABMKsFZ5y8wN39X8J/FPcmUR6hLlnIedu1J+ZsxwcCfF64gMvfPE2xOiR",
        "x86_64-linux": "sha384-7PVWOmKvdH7KD1lRPosQfedN4Dy2BxGYNh5MMFqKpu9Opm44G2y8dM/8vR/ZwKiC",
        "x86_64-macos": "sha384-Lp3L3RQ85K9/3lRrdZy2ofKCeb6qrsfFfiZrOwcok6Osl6wBaoQ6Ubjv+CH2FUbZ",
    }[exe_platform],
    url = "https://github.com/google/go-containerregistry/releases/download/v{version}/go-containerregistry_{platform}.tar.gz".format(
        platform = {
            "aarch64-linux": "Linux_arm64",
            "aarch64-macos": "Darwin_arm64",
            "x86_64-linux": "Linux_x86_64",
            "x86_64-macos": "Darwin_x86_64",
        }[exe_platform],
        version = crane_version,
    ),
) for exe_platform in execution_platforms]

[http_archive(
    name = "grpcurl.{}".format(exe_platform),
    build_file_content = """
exports_files(
    ["grpcurl"],
    visibility = ["//visibility:public"],
)
""",
    integrity = {
        "aarch64-linux": "sha384-LFA2ISyrKh1J9V/UxVLP2o0rcRxvqgI75Tb0luGSYrPWOK+AylMTpgCMx9cRncKn",
        "aarch64-macos": "sha384-htTLGgYUHnRm0PIYjmltlPEvG08KjORjC5Gq3R9b7XnreM79C8bagXPYwoI/yc3N",
        "x86_64-linux": "sha384-itN9NyTFw1ZsN4ZbQ6XKsDRTHgAA3YoLGq1dF2sq4aIh6mUyodtb3N/GgUSVOU4j",
        "x86_64-macos": "sha384-PU+zvkhBSMCbLmUIUwmpI83sRu+coN1/LkCauyxw5lGl5KcWCKfNJpnVccKTt2c2",
    }[exe_platform],
    url = "https://github.com/fullstorydev/grpcurl/releases/download/v{version}/grpcurl_{version}_{platform}.tar.gz".format(
        platform = {
            "aarch64-linux": "linux_arm64",
            "aarch64-macos": "osx_arm64",
            "x86_64-linux": "linux_x86_64",
            "x86_64-macos": "osx_x86_64",
        }[exe_platform],
        version = grpcurl_version,
    ),
) for exe_platform in execution_platforms]

[http_archive(
    name = "grpc-plugins.{}".format(exe_platform),
    build_file_content = """
exports_files(
    [
        "protoc-gen-grpc_cpp",
        "protoc-gen-grpc_csharp",
        "protoc-gen-grpc_node",
        "protoc-gen-grpc_objective_c",
        "protoc-gen-grpc_php",
        "protoc-gen-grpc_python",
        "protoc-gen-grpc_ruby",
    ],
    visibility = ["//visibility:public"],
)
""",
    integrity = {
        "aarch64-linux": "sha384-kTWiwecnkL0yM/sQ7DgsoTqUguD3cFNsw5Ys+5wGGvfTDsZrmiyfTfdQi3Ijd9wX",
        "aarch64-macos": "sha384-TJfBdrtCmtkqKjbOFBoZhD7RMuCihi9XIKvq/nmmmdijiTQW3rF7rJGoGCVzmW63",
        "x86_64-linux": "sha384-kWXOEcPex+emG5NwJMpuwgdYg2M/mZOvi+90DcJZCumarLgKyt6Nf2PToVWP+h12",
        "x86_64-macos": "sha384-68zmuhMUmxBktMpTRzFa6Jf0jxWaeprlZTdeEoB/NvRqN10Sm8XdALIx2j9zDAXt",
    }[exe_platform],
    url = "https://github.com/vimana-cloud/grpc/releases/download/v{version}/protoc-plugins-{platform}.tar.gz".format(
        platform = exe_platform,
        version = grpc_plugins_version,
    ),
) for exe_platform in execution_platforms]

# TODO: Use `http_archive` to download and extract.
#   https://github.com/helm/helm/issues/31844
http_file(
    name = "external-dns-helm-chart",
    integrity = "sha384-pfKzHGEwOh+i3LTLVS5BCg0kyIhxvqiMNmRMqVXiDB/sKp0++xb7F6onMuBlVjDN",
    url = "https://github.com/kubernetes-sigs/external-dns/releases/download/external-dns-helm-chart-{version}/external-dns-{version}.tgz".format(
        version = external_dns_helm_version,
    ),
)

oci.pull(
    name = "envoy-gateway-helm-image",
    digest = envoy_gateway_helm_digest,
    image = "docker.io/envoyproxy/gateway-helm",
)
oci.pull(
    name = "cert-manager-helm-image",
    digest = cert_manager_helm_digest,
    image = "quay.io/jetstack/charts/cert-manager",
)
use_repo(
    oci,
    "cert-manager-helm-image",
    "envoy-gateway-helm-image",
)
